# wallow

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/matching_feedback/: README.md  analysis.py  dispatcher.py  wallow.toml
examples/matching_feedback/alembic/: env.py
examples/matching_feedback/alembic/snapshots/: 25d857902f9d.toml  2737e4057e14.toml  c1a1abeffa7f.toml
examples/matching_feedback/alembic/versions/: 2026_04_28_0037-25d857902f9d_initial_schema.py  2026_04_28_0037-2737e4057e14_add_warmup_steps.py  2026_04_29_2356-c1a1abeffa7f_add_uuid_column.py
examples/ml_sweep/: README.md  alembic.ini  analyse.py  sweep.py  wallow.toml
examples/ml_sweep/alembic/snapshots/: d7a38357a126.toml  fd626c71ffe9.toml
examples/ml_sweep/alembic/versions/: 2026_04_28_0110-fd626c71ffe9_initial_schema.py  2026_04_29_2353-d7a38357a126_initial_schema.py
specs/: wallow_spec.md
src/wallow/: __init__.py  _paths.py  cli.py  dsl.py  errors.py  migrations.py  schema.py  store.py
src/wallow/contrib/: __init__.py  lifecycle.py
src/wallow/templates/: alembic.ini.template  wallow.toml.template
src/wallow/templates/alembic/: script.py.mako
tests/: conftest.py  test_cli.py  test_dsl.py  test_ergonomics.py  test_lifecycle.py  test_migrations.py  test_paths.py  test_schema.py  test_store.py
tests/fixtures/: example_wallow.toml
