[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallow"
version = "0.1.0"
description = "A deduplicating run registry for ML research, with TOML schemas, an expression DSL, and Alembic migrations."
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.scripts]
wallow = "wallow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wallow = ["templates/*", "templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
