[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallow"
version = "0.2.0"
description = "A deduplicating run registry for ML research, with TOML schemas, an expression DSL, and Alembic migrations."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Yiding Song", email = "dev@yiding.rocks" }]
requires-python = ">=3.10"
keywords = ["ml", "experiments", "registry", "deduplication", "sqlalchemy", "alembic", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/PerceptronV/wallow"
Repository = "https://github.com/PerceptronV/wallow"
Issues = "https://github.com/PerceptronV/wallow/issues"

[project.scripts]
wallow = "wallow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wallow = [
    "templates/*.template",
    "templates/alembic/*.template",
    "templates/alembic/*.mako",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
